Adding seperate css

--- a/css_folder/index.html
+++ b/css_folder/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Correct place for CSS link -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: greenyellow;font: size 100px; background-color: aqua;max-width: 170px;display:inline">Hello world</h1>
+
+    <!-- <h1 style="color: greenyellow;font: size 100px; background-color: aqua;max-width: 170px;display:inline">Hello world </h1> -->
+    <h1>Hello World</h1>
+
 </body>
 </html>
